--- a/404.html
+++ b/404.html
@@ -80,11 +80,11 @@
 		</script>
 
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CcPr2wIH.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CWrYsVGY.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CykqVOBg.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DkZcDF0k.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BW5O_Kuy.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BaNWsKEw.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DnvmBgxm.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.IMKhMri8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CHDbkL9n.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/TqRWhDz0.js">
 	</head>
@@ -93,15 +93,15 @@
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_a16qj5 = {
+					__sveltekit_13sts9d = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CcPr2wIH.js"),
-						import("/_app/immutable/entry/app.DnvmBgxm.js")
+						import("/_app/immutable/entry/start.CykqVOBg.js"),
+						import("/_app/immutable/entry/app.IMKhMri8.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
