--- a/404.html
+++ b/404.html
@@ -80,28 +80,27 @@
 		</script>
 
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CykqVOBg.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DkZcDF0k.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BW5O_Kuy.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BaNWsKEw.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.IMKhMri8.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CHDbkL9n.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/TqRWhDz0.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CYDZRYil.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Dnix3uWg.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/l9_l0KjY.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/ByFbdkgy.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.ChSOmPvD.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BNrqeJGM.js">
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_13sts9d = {
+					__sveltekit_h5r0d6 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CykqVOBg.js"),
-						import("/_app/immutable/entry/app.IMKhMri8.js")
+						import("/_app/immutable/entry/start.CYDZRYil.js"),
+						import("/_app/immutable/entry/app.ChSOmPvD.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
