--- a/404.html
+++ b/404.html
@@ -80,11 +80,11 @@
 		</script>
 
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CYDZRYil.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Dnix3uWg.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.D1YME05r.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BWC66CmZ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/l9_l0KjY.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/ByFbdkgy.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.ChSOmPvD.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BzREpPcd.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BNrqeJGM.js">
 	</head>
 
@@ -92,15 +92,15 @@
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_h5r0d6 = {
+					__sveltekit_19cjpr3 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CYDZRYil.js"),
-						import("/_app/immutable/entry/app.ChSOmPvD.js")
+						import("/_app/immutable/entry/start.D1YME05r.js"),
+						import("/_app/immutable/entry/app.BzREpPcd.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
