--- a/404.html
+++ b/404.html
@@ -80,27 +80,27 @@
 		</script>
 
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.D1YME05r.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BWC66CmZ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/l9_l0KjY.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/ByFbdkgy.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BzREpPcd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BNrqeJGM.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BjwDxj-l.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/OF19mwXE.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/B2PMlZio.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/GrwCXr2j.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.C_UkHZ5s.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DXY0rfsH.js">
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_19cjpr3 = {
+					__sveltekit_mcbbix = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.D1YME05r.js"),
-						import("/_app/immutable/entry/app.BzREpPcd.js")
+						import("/_app/immutable/entry/start.BjwDxj-l.js"),
+						import("/_app/immutable/entry/app.C_UkHZ5s.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
