--- a/old/index.html
+++ b/old/index.html
@@ -83,25 +83,25 @@
 		<link href="../_app/immutable/assets/0.C1LvOjWK.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.BjwDxj-l.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/OF19mwXE.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.CxQTMlrQ.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/5Ih7ba9l.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/B2PMlZio.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/GrwCXr2j.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.C_UkHZ5s.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app._YaADG2I.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DXY0rfsH.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.Dn14FzEx.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.D-Sxo_ow.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DC8nUZzH.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/G6LXMITQ.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/BKqZGH_8.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Dt7HSF_7.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/xaFq2bWR.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DhA_3YI6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/RDEbpPPL.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Cu6gKChH.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/VIxWhfwy.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/DF6FAu1A.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/BxZ5H7yQ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_fsvTDOQ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/WAdjd4xe.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/4.CYLQ4NEe.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CtGbRv2u.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/4.B-4mJt7J.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CQ2piJxt.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BmkwsLdk.js">
 	</head>
 
@@ -118,15 +118,15 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_mcbbix = {
+					__sveltekit_108ofoa = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.BjwDxj-l.js"),
-						import("../_app/immutable/entry/app.C_UkHZ5s.js")
+						import("../_app/immutable/entry/start.CxQTMlrQ.js"),
+						import("../_app/immutable/entry/app._YaADG2I.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
