--- a/404.html
+++ b/404.html
@@ -80,11 +80,11 @@
 		</script>
 
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CxQTMlrQ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/5Ih7ba9l.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BQ-xZDsm.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Du5RRvpg.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/B2PMlZio.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/GrwCXr2j.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app._YaADG2I.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DQD3kO_6.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DXY0rfsH.js">
 	</head>
 
@@ -92,15 +92,15 @@
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_108ofoa = {
+					__sveltekit_iyodyp = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CxQTMlrQ.js"),
-						import("/_app/immutable/entry/app._YaADG2I.js")
+						import("/_app/immutable/entry/start.BQ-xZDsm.js"),
+						import("/_app/immutable/entry/app.DQD3kO_6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
