--- a/teacher/index.html
+++ b/teacher/index.html
@@ -80,28 +80,28 @@
 		</script>
 
 		
-		<link href="../_app/immutable/assets/0.DQOaf1dR.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/0.BpEbwg8y.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.BQ-xZDsm.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Du5RRvpg.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.D9x-QSdS.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/BPMiqFgX.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/B2PMlZio.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/GrwCXr2j.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.DQD3kO_6.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.Cz7pC_Iv.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DXY0rfsH.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.BdZfRbi9.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.B-K8AZ9N.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DC8nUZzH.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CGZNN_-0.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Dqmw1x6k.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DWwFZPDY.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CGm5wyGq.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DhA_3YI6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/RDEbpPPL.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Cu6gKChH.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/VIxWhfwy.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Cf9VEbSC.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/C7guKZkD.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_fsvTDOQ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/WAdjd4xe.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/5.DCav-HZw.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/PeldpDkf.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/5.CncffuX1.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/B6H9WgdX.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BmkwsLdk.js">
 	</head>
 
@@ -110,15 +110,15 @@
 			
 			<script>
 				{
-					__sveltekit_iyodyp = {
+					__sveltekit_14y8vrx = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.BQ-xZDsm.js"),
-						import("../_app/immutable/entry/app.DQD3kO_6.js")
+						import("../_app/immutable/entry/start.D9x-QSdS.js"),
+						import("../_app/immutable/entry/app.Cz7pC_Iv.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
