--- a/404.html
+++ b/404.html
@@ -80,11 +80,11 @@
 		</script>
 
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.D9x-QSdS.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BPMiqFgX.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.l1fc-U8E.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BQ-V7p7X.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/B2PMlZio.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/GrwCXr2j.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Cz7pC_Iv.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.D5zMsvZD.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DXY0rfsH.js">
 	</head>
 
@@ -92,15 +92,15 @@
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_14y8vrx = {
+					__sveltekit_14wf9xa = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.D9x-QSdS.js"),
-						import("/_app/immutable/entry/app.Cz7pC_Iv.js")
+						import("/_app/immutable/entry/start.l1fc-U8E.js"),
+						import("/_app/immutable/entry/app.D5zMsvZD.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
