--- a/404.html
+++ b/404.html
@@ -80,27 +80,27 @@
 		</script>
 
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.l1fc-U8E.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BQ-V7p7X.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B2PMlZio.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/GrwCXr2j.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.D5zMsvZD.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DXY0rfsH.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BkaWNfN3.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/3ITEzmO3.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BjlOfhaz.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BYL-VKo0.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.ButlKW6P.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DZG8QBda.js">
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_14wf9xa = {
+					__sveltekit_1y3puhp = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.l1fc-U8E.js"),
-						import("/_app/immutable/entry/app.D5zMsvZD.js")
+						import("/_app/immutable/entry/start.BkaWNfN3.js"),
+						import("/_app/immutable/entry/app.ButlKW6P.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
