--- a/404.html
+++ b/404.html
@@ -80,27 +80,27 @@
 		</script>
 
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BkaWNfN3.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/3ITEzmO3.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BjlOfhaz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BYL-VKo0.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.ButlKW6P.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DZG8QBda.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Bqf8pSZL.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C_X2Y9JC.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CHILHeLz.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BQP7Folr.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DsCa49B-.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/42UYTaT9.js">
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1y3puhp = {
+					__sveltekit_p70kyh = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BkaWNfN3.js"),
-						import("/_app/immutable/entry/app.ButlKW6P.js")
+						import("/_app/immutable/entry/start.Bqf8pSZL.js"),
+						import("/_app/immutable/entry/app.DsCa49B-.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
