--- a/404.html
+++ b/404.html
@@ -80,11 +80,11 @@
 		</script>
 
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Bqf8pSZL.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C_X2Y9JC.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.zglpkRtn.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DPV1OsgP.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CHILHeLz.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BQP7Folr.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DsCa49B-.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BqcCXVO-.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/42UYTaT9.js">
 	</head>
 
@@ -92,15 +92,15 @@
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_p70kyh = {
+					__sveltekit_awsf8e = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Bqf8pSZL.js"),
-						import("/_app/immutable/entry/app.DsCa49B-.js")
+						import("/_app/immutable/entry/start.zglpkRtn.js"),
+						import("/_app/immutable/entry/app.BqcCXVO-.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
