--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@
 		
 		<link href="./_app/immutable/assets/0.dnbxkB63.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.zglpkRtn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DPV1OsgP.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CHILHeLz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BQP7Folr.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BqcCXVO-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/42UYTaT9.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DewLDIZ3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BCILilgs.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/jxzNj7g9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_u7mahDQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BLlQ4_d2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DPt3Za4q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/IYPy_brt.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.SWMLyrVb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CwRDEe72.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BW7iNGtg.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/5CkgAun_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/qZkq46ki.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CtjsLPvk.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Dy0Yp6a9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CKnpPdjk.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CT7JYTVG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/lkTmPaGs.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CUEAHjfv.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B0VperFo.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CUjOuwCZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B3wNevCY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CUlSzXwq.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.D89G-jlc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D4uOy5kb.js">
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
@@ -104,15 +104,15 @@
 			
 			<script>
 				{
-					__sveltekit_awsf8e = {
+					__sveltekit_1hxfaz7 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.zglpkRtn.js"),
-						import("./_app/immutable/entry/app.BqcCXVO-.js")
+						import("./_app/immutable/entry/start.BW7iNGtg.js"),
+						import("./_app/immutable/entry/app.Dy0Yp6a9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
