--- a/teacher/index.html
+++ b/teacher/index.html
@@ -82,21 +82,21 @@
 		
 		<link href="../_app/immutable/assets/Toaster.DIZjURCf.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/0.hsMIfF8U.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.Ds1EKvTW.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/BZruRiPO.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.D0aVBAGv.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/BkmmKhHV.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Cz84p5nM.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/2DEE289M.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.CvsWt1lX.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.Dr9JN3is.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/D9_PjALK.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.B4UpgQXG.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.MnDS9JRq.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Cm_CHa6s.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CCLv9vPt.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CExGBEqa.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/qP_FINuA.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CetL_s3t.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BmKE9Sb-.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/D_nmoYEX.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/4.DGg06V1K.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CB0MS7ny.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/4.Dq6y6z9N.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CgYvCSra.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Cwrf1RBJ.js">
 	</head>
 
@@ -105,15 +105,15 @@
 			
 			<script>
 				{
-					__sveltekit_18jv1vi = {
+					__sveltekit_a08wdv = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.Ds1EKvTW.js"),
-						import("../_app/immutable/entry/app.CvsWt1lX.js")
+						import("../_app/immutable/entry/start.D0aVBAGv.js"),
+						import("../_app/immutable/entry/app.Dr9JN3is.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
