--- a/teacher/index.html
+++ b/teacher/index.html
@@ -81,22 +81,22 @@
 
 		
 		<link href="../_app/immutable/assets/Toaster.DIZjURCf.css" rel="stylesheet">
-		<link href="../_app/immutable/assets/0.hsMIfF8U.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.CFpSh3Ry.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/D311woCE.js">
+		<link href="../_app/immutable/assets/0.DdbanLih.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.DO4ONezC.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/QA-gQw44.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Cz84p5nM.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/2DEE289M.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.D86kiEK1.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.CrPdP95t.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/D9_PjALK.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.MUY9iZbd.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.DtP5ZGan.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Cm_CHa6s.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CCLv9vPt.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/CxbXp_vc.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/kwbO2ugo.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CetL_s3t.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BmKE9Sb-.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/D_nmoYEX.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/4.BRmbfvr9.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/BMti0VZV.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/4.TK1hRHVZ.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/B1AoJ_sy.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Cwrf1RBJ.js">
 	</head>
 
@@ -105,15 +105,15 @@
 			
 			<script>
 				{
-					__sveltekit_150i0e5 = {
+					__sveltekit_18ktfki = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.CFpSh3Ry.js"),
-						import("../_app/immutable/entry/app.D86kiEK1.js")
+						import("../_app/immutable/entry/start.DO4ONezC.js"),
+						import("../_app/immutable/entry/app.CrPdP95t.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
