--- a/teacher/index.html
+++ b/teacher/index.html
@@ -82,21 +82,21 @@
 		
 		<link href="../_app/immutable/assets/Toaster.DIZjURCf.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/0.DdbanLih.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.DO4ONezC.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/QA-gQw44.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.iWlhd9qs.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CosccxrC.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Cz84p5nM.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/2DEE289M.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.CrPdP95t.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.C4FjOSye.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/D9_PjALK.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.DtP5ZGan.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.CHxl85-3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Cm_CHa6s.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CCLv9vPt.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/kwbO2ugo.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Cxrv29Rm.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CetL_s3t.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BmKE9Sb-.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/D_nmoYEX.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/4.TK1hRHVZ.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/B1AoJ_sy.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/4.uUE_H3KC.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DP8ETgFt.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Cwrf1RBJ.js">
 	</head>
 
@@ -105,15 +105,15 @@
 			
 			<script>
 				{
-					__sveltekit_18ktfki = {
+					__sveltekit_mry1un = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.DO4ONezC.js"),
-						import("../_app/immutable/entry/app.CrPdP95t.js")
+						import("../_app/immutable/entry/start.iWlhd9qs.js"),
+						import("../_app/immutable/entry/app.C4FjOSye.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
