--- a/teacher/index.html
+++ b/teacher/index.html
@@ -82,21 +82,21 @@
 		
 		<link href="../_app/immutable/assets/Toaster.DIZjURCf.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/0.XXgkcgSK.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.DEXz129K.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/B-X7tKKe.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.D9ASkq_W.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/CpJUBfgp.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Cz84p5nM.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/2DEE289M.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.BoBYYPtf.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.D40A2GQM.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CafvPmdz.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.BebcPU8z.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.C9-JUqYp.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Dq2DS5JJ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Bu-Sn1jY.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/B_5k6VoC.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/BErdO1RD.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Cq2yM7d-.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DaiCw33Z.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CQ2aDG3A.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/4.DlINZ2j6.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/C3_nGGen.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/4.BlL97EiH.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Mlxn4YWK.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BANrAeDQ.js">
 	</head>
 
@@ -105,15 +105,15 @@
 			
 			<script>
 				{
-					__sveltekit_diauk6 = {
+					__sveltekit_gdba4d = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.DEXz129K.js"),
-						import("../_app/immutable/entry/app.BoBYYPtf.js")
+						import("../_app/immutable/entry/start.D9ASkq_W.js"),
+						import("../_app/immutable/entry/app.D40A2GQM.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
